# rdo-jobs

./: .ansible-lint  .gitreview  .pre-commit-config.yaml  .yamllint  .zuu.yaml  .zuul.yaml  DNM  README.rst  TO_TRANSLATE  bindep.txt  groups  molecule-requirements.txt  project.config  puppet-ci-promote.sh  setup.cfg  test-requirements.txt  test.yaml  tox-post.yaml  tox-pre.yaml  tox.ini
doc/: requirements.txt
playbooks/: benchmark.yaml  buildsys-tags-update-run.yaml  ci_framework_create_standalone_vm.yaml  cloudsig.yaml  dib-placeholder.yaml  fail.yaml  fix-zuul-worker.yaml  force_job_failure.yaml  hello-baremetal.yaml  logsgzip.yaml  mirror.yaml  nodeset-validator-pre.yml  packstack-centos8-post.yaml  packstack-centos8-pre.yaml  packstack-integration-tempest.yaml  post-collect.yaml  post-rdoinfo.yaml  post-role.yaml  post-tox.yaml  post.yaml  pre-rdoinfo.yaml  pre-run-molecule.yaml  pre-tox.yaml  promote.yaml  rdo-tox-epel.yaml  rdo-tox-molecule-pre.yaml  registry-login.yml  reqcheck.yaml  run-distgit.yaml  run-rdoinfo-cbs-centos8.yaml  run-rdoinfo-cbs-centos9.yaml  run-rdoinfo-cbs.yaml  run-rdoinfo.yaml  run-rpm-build.yaml  scenario010-kvm-trigger.yaml  temp-distgit.repo.j2  test-job.yaml  test.yaml  test1.yaml  test2.yaml  (+6 more)
roles/: add_crc_creds  add_external_compute_node_secret  external_compute_play  tempest-run  use_install_yamls
tools/: test-setup.sh
zuul.d/: LEFT_TO_TRANSLATE  _data_plane_adoption.yaml  _edpm_ansible_jobs.yaml  _jobs-crc.yaml  _openstack_ansibleee_operator_jobs.yaml  ansible-collections.yaml  ansible-role-container-registry.yaml  base.yaml  (+121 more)
(+669 files in other folders)
