[metadata]
name = rdo-jobs
summary = A set of Ansible playbooks used by RDO projects CI system
description-file =
    README.rst
author = RDO Infrastructure Team
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python

